fix horizontal scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,12 @@
 
 @custom-variant dark (&:is(.dark *));
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -80,6 +86,7 @@
   --sidebar-accent-foreground: oklch(0.216 0.006 56.043);
   --sidebar-border: oklch(0.923 0.003 48.717);
   --sidebar-ring: oklch(0.709 0.01 56.259);
+
 }
 
 .dark {
